# RooFit_Training

./: .gitignore  CMakeLists.txt  README.md  test.py
include/: fitting.hpp  sampling.hpp  termit.hpp  workspace.hpp
src/: fitting.cpp  main.cpp  sampling.cpp  termit.cpp  workspace.cpp
